--- a/euflo/localisation/euflo_l_english.yml
+++ b/euflo/localisation/euflo_l_english.yml
@@ -8,12 +8,13 @@
  FLO_ideas_bonus: "Floridian ideas"
  big_pop: "Growing Population"
  big_pop_desc: "Florida has a growing population, ready for expansion."
+ swamp_people: "Swamp People"
  swamp_people_desc: "Floridians are used to swampy conditions, letting them survive in more harsh conditions."
  flo_oranges: "Oranges"
  flo_oranges_desc: "The great oranges of Florida help the health of Floridians."
  long_coast: "The Long Coast"
- long_coast_desc: "Florida has a long coastline. Many boats can depart from the many docks there (except there are few deepwater ports in reality).
- flo_auto: "Floridian centralization"
+ long_coast_desc: "Florida has a long coastline. Many boats can depart from the many docks there (except there are few deepwater ports in reality)."
+ flo_auto: "Floridian Centralization"
  flo_auto_desc: "I can't think of a good description"
  flo_dev: "Floridian Development"
  flo_dev_desc: "Floridian's know how to give back to Florida. Developing Florida is their number one priority."
